@@ -1,12 +1,40 @@
 Package: bbmle
 Title: Tools for general maximum likelihood estimation
-Version: 1.0.6
-Date: 2012/11/26
+Version: 1.0.7
+Date: 2013/02/01
 Author: Ben Bolker <bolker@mcmaster.ca>, R Development Core Team
 Maintainer: Ben Bolker <bolker@mcmaster.ca>
-Depends: methods, stats4
-Imports: stats, graphics, stats4, numDeriv, lattice, MASS
-Suggests: aod, emdbook, rms, ggplot2, RUnit, MuMIn, AICcmodavg, Hmisc, optimx
-Description: Methods and functions for fitting maximum likelihood models in R.  This package modifies and extends the mle classes in the stats4 package.
+Depends:
+    methods,
+    stats4
+Imports:
+    stats,
+    graphics,
+    stats4,
+    numDeriv,
+    lattice,
+    MASS
+Suggests:
+    aod,
+    emdbook,
+    rms,
+    ggplot2,
+    RUnit,
+    MuMIn,
+    AICcmodavg,
+    Hmisc,
+    optimx
+Description: Methods and functions for fitting maximum likelihood models in R.
+    This package modifies and extends the mle classes in the stats4 package.
 License: GPL
-Collate: mle2-class.R mle2-methods.R mle.R confint.R predict.R profile.R update.R dists.R IC.R slice.R
+Collate:
+    'mle2-class.R'
+    'mle2-methods.R'
+    'mle.R'
+    'confint.R'
+    'predict.R'
+    'profile.R'
+    'update.R'
+    'dists.R'
+    'IC.R'
+    'slice.R'
