@@ -113,7 +113,7 @@ x1 <- rbetabinom(n=1000,prob=0.1,size=50,theta=10)
 
 Load the package:
 <<bbmle>>=
-library(bbmle)
+library("bbmle")
 @ 
 
 Construct a simple negative log-likelihood function:
